--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/**/node_modules
+/**/build
+/**/dist
 /.pnp
 .pnp.js
 
@@ -24,3 +26,7 @@ yarn-error.log*
 
 # Intellij IDEA
 .idea
+
+
+# Twitch secrets
+/**/.env
