--- a/.github/workflows/run-script.yaml
+++ b/.github/workflows/run-script.yaml
@@ -27,12 +27,10 @@ jobs:
       run: |
         echo "Listing current directory structure"
         ls -al
-        echo "Listing contents of dist directory"
-        ls -al dist
-
+  
     - name: Build TypeScript
       working-directory: apps/twitch-db-async-fetcher
-      run: npm run build # Ensure TypeScript is compiled to the `dist` directory
+      run: npm run build
 
     - name: List directory structure after build
       working-directory: apps/twitch-db-async-fetcher
