--- a/apps/twitch-db-async-fetcher/package.json
+++ b/apps/twitch-db-async-fetcher/package.json
@@ -4,7 +4,7 @@
   "description": "A Node.js application that runs periodically.",
   "main": "index.ts",
   "scripts": {
-    "build": "tsc build",
+    "build": "tsc",
     "start": "tsc & node dist/index.js"
   },
   "devDependencies": {
