--- a/.github/workflows/run-script.yaml
+++ b/.github/workflows/run-script.yaml
@@ -42,7 +42,7 @@ jobs:
         TARGET_REPO_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
       run: |
         # Clone the target repository
-        git clone https://x-access-token:${REPO_ACCESS_TOKEN}@github.com/pajelonek/twitch-statistics-db.git target-db
+        git clone https://x-access-token:${{secrets.REPO_ACCESS_TOKEN}}@github.com/pajelonek/twitch-statistics-db.git target-db
         cd target-db
         
         # Configure Git with credentials
