--- a/.github/workflows/run-script.yaml
+++ b/.github/workflows/run-script.yaml
@@ -55,7 +55,7 @@ jobs:
         # Add, commit, and push changes
         git add newfile.txt
         git commit -m "Add new data file"
-        git push https://x-access-token:${{ secrets.REPO_ACCESS_TOKEN }}@github.com/pajelonek/twitch-statistics-db.git main
+        git push https://x-access-token:${{ secrets.REPO_ACCESS_TOKEN }}@github.com/pajelonek/twitch-statistics-db.git master
         
     - name: Cleanup
       run: |
