--- a/.github/workflows/run-script.yaml
+++ b/.github/workflows/run-script.yaml
@@ -33,30 +33,30 @@ jobs:
         TWITCH_CLIENT_ID: ${{ secrets.TWITCH_CLIENT_ID }}
         TWITCH_CLIENT_SECRET: ${{ secrets.TWITCH_CLIENT_SECRET }}
     
-    - name: Generate new data file
-      run: |
-        echo "New data" > newfile.txt
+    # - name: Generate new data file
+    #   run: |
+    #     echo "New data" > newfile.txt
 
-    - name: Add file to another repository
-      env:
-        TARGET_REPO_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
-      run: |
-        # Clone the target repository
-        git clone https://x-access-token:${{secrets.REPO_ACCESS_TOKEN}}@github.com/pajelonek/twitch-statistics-db.git target-db
-        cd target-db
+    # - name: Add file to another repository
+    #   env:
+    #     TARGET_REPO_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
+    #   run: |
+    #     # Clone the target repository
+    #     git clone https://x-access-token:${{secrets.REPO_ACCESS_TOKEN}}@github.com/pajelonek/twitch-statistics-db.git target-db
+    #     cd target-db
         
-        # Configure Git with credentials
-        git config user.name "github-actions"
-        git config user.email "actions@github.com"
+    #     # Configure Git with credentials
+    #     git config user.name "github-actions"
+    #     git config user.email "actions@github.com"
         
-        # Copy file to the target repository
-        cp ../newfile.txt .
+    #     # Copy file to the target repository
+    #     cp ../newfile.txt .
         
-        # Add, commit, and push changes
-        git add newfile.txt
-        git commit -m "Add new data file"
-        git push https://x-access-token:${{ secrets.REPO_ACCESS_TOKEN }}@github.com/pajelonek/twitch-statistics-db.git master
+    #     # Add, commit, and push changes
+    #     git add newfile.txt
+    #     git commit -m "Add new data file"
+    #     git push https://x-access-token:${{ secrets.REPO_ACCESS_TOKEN }}@github.com/pajelonek/twitch-statistics-db.git master
         
-    - name: Cleanup
-      run: |
-        rm -rf target-repo
+    # - name: Cleanup
+    #   run: |
+    #     rm -rf target-repo
