--- a/apps/twitch-statistics-page/package.json
+++ b/apps/twitch-statistics-page/package.json
@@ -16,17 +16,17 @@
     "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "ts-node": "^10.9.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "e2e": "npx playwright test",
-    "eject": "react-scripts eject"
+    "e2e": "npx playwright test"
   },
   "eslintConfig": {
     "extends": [
@@ -47,8 +47,18 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
     "@playwright/test": "^1.46.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.8.0",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.9",
     "gh-pages": "^6.1.1",
-    "tailwindcss": "^3.4.9"
+    "globals": "^15.9.0",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10",
+    "typescript-eslint": "^8.0.0",
+    "vite": "^5.4.0"
   }
 }
