--- a/apps/twitch-statistics-page/package.json
+++ b/apps/twitch-statistics-page/package.json
@@ -24,8 +24,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist",
     "e2e": "npx playwright test"
   },
   "eslintConfig": {
@@ -58,6 +58,7 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
+    "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.4.0"
   }
