--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,16 +31,19 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v4
       - name: Install dependencies
+        working-directory: apps/twitch-statistics-page
         run: npm install
       - name: Build
+        working-directory: apps/twitch-statistics-page
         run: npm run build
       - name: Setup Pages
+        working-directory: apps/twitch-statistics-page
         uses: actions/configure-pages@v4
       - name: Upload artifact
+        working-directory: apps/twitch-statistics-page
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload dist folder
-          path: './twitch-statistics-page/dist'
+          path: './dist'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
