--- a/.github/workflows/push-prod.yaml
+++ b/.github/workflows/push-prod.yaml
@@ -37,7 +37,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'apps/twitch-statistics-page/dist/**'
+          path: 'apps/twitch-statistics-page/dist/'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
