Making push to github pages auto

--- a/.github/workflows/push-prod.yaml
+++ b/.github/workflows/push-prod.yaml
@@ -32,12 +32,6 @@ jobs:
       - name: Build
         working-directory: apps/twitch-statistics-page
         run: npm run build
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: 'apps/twitch-statistics-page/dist/'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+      - name: Deploy
+        working-directory: apps/twitch-statistics-page
+        run: npm run deploy
