--- a/.github/workflows/push-prod.yaml
+++ b/.github/workflows/push-prod.yaml
@@ -32,6 +32,12 @@ jobs:
       - name: Build
         working-directory: apps/twitch-statistics-page
         run: npm run build
-      - name: Deploy
-        working-directory: apps/twitch-statistics-page
-        run: npm run deploy
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: 'apps/twitch-statistics-page/'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
