--- a/apps/twitch-statistics-page/package.json
+++ b/apps/twitch-statistics-page/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "gh-pages": "^6.1.1",
     "globals": "^15.9.0",
+    "husky": "^9.1.4",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
     "ts-node": "^10.9.2",
