--- a/.github/workflows/push-prod.yaml
+++ b/.github/workflows/push-prod.yaml
@@ -30,6 +30,7 @@ jobs:
         run: npm install
 
       - name: SonarCloud Scan
+        working-directory: apps/twitch-statistics-page
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
