--- a/.github/workflows/push-prod.yaml
+++ b/.github/workflows/push-prod.yaml
@@ -24,6 +24,12 @@ jobs:
 
       - name: Set up Node
         uses: actions/setup-node@v4
+      
+      - name: Set up Java 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'adopt'
+          java-version: '17'
 
       - name: Install dependencies
         working-directory: apps/twitch-statistics-page
