--- a/.github/workflows/push-prod.yaml
+++ b/.github/workflows/push-prod.yaml
@@ -1,9 +1,8 @@
-name: Deploy static content to Pages
+name: Push to prod
 
 on:
   push:
     branches: ['master']
-
   workflow_dispatch:
 
 permissions:
@@ -16,7 +15,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  sonar_scan:
+  setup:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -24,16 +23,48 @@ jobs:
 
       - name: Set up Node
         uses: actions/setup-node@v4
-      
+
+      - name: Cache Node.js modules
+        id: cache-node-modules
+        uses: actions/cache@v3
+        with:
+          path: apps/twitch-statistics-page/node_modules
+          key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-modules-
+
+      - name: Install dependencies
+        working-directory: apps/twitch-statistics-page
+        run: npm install
+
       - name: Set up Java 17
         uses: actions/setup-java@v3
         with:
           distribution: 'adopt'
           java-version: '17'
 
-      - name: Install dependencies
+      - name: Build
         working-directory: apps/twitch-statistics-page
-        run: npm install
+        run: npm run build
+
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-artifact
+          path: apps/twitch-statistics-page/dist/
+
+  sonar_scan:
+    needs: setup
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Download Build Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: build-artifact
+          path: apps/twitch-statistics-page/dist/
 
       - name: SonarCloud Scan
         working-directory: apps/twitch-statistics-page
@@ -41,14 +72,15 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          npm run build
           npx sonar-scanner \
             -Dsonar.projectKey=pajelonek_twitch-statistics-page \
             -Dsonar.organization=pajelonek \
             -Dsonar.sources=. \
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+
   deploy:
+    needs: setup
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -56,20 +88,21 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Set up Node
-        uses: actions/setup-node@v4
-      - name: Install dependencies
-        working-directory: apps/twitch-statistics-page
-        run: npm install
-      - name: Build
-        working-directory: apps/twitch-statistics-page
-        run: npm run build
+
+      - name: Download Build Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: build-artifact
+          path: apps/twitch-statistics-page/dist/
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: 'apps/twitch-statistics-page/dist/'
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
