Add e2e tests to actions

--- a/.github/workflows/push-prod.yaml
+++ b/.github/workflows/push-prod.yaml
@@ -110,3 +110,32 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+
+  e2e_tests:
+    needs: setup
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+      - name: Cache Node.js modules
+        id: cache-node-modules
+        uses: actions/cache@v3
+        with:
+          path: apps/twitch-statistics-page/node_modules
+          key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-modules-
+
+      - name: Install dependencies for e2e tests
+        working-directory: apps/twitch-statistics-page
+        run: npm ci
+
+      - name: Run e2e tests
+        working-directory: apps/twitch-statistics-page
+        run: npm run e2e
