--- a/.github/workflows/fetch-data.yaml
+++ b/.github/workflows/fetch-data.yaml
@@ -15,6 +15,17 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '16'
+    
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.12'
+
+    - name: Test python
+      working-directory: apps/twitch-db-async-fetcher
+      run: |
+        python -m pip install --upgrade pip
+        pip install bs4 cloudscraper
 
     - name: Install dependencies
       working-directory: apps/twitch-db-async-fetcher
