--- a/.github/workflows/fetch-data.yaml
+++ b/.github/workflows/fetch-data.yaml
@@ -26,6 +26,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install bs4 cloudscraper
+        python test.py
 
     - name: Install dependencies
       working-directory: apps/twitch-db-async-fetcher
