--- a/apps/async-statistics-calc/package.json
+++ b/apps/async-statistics-calc/package.json
@@ -4,8 +4,10 @@
   "description": "A Node.js application that runs periodically to calculate statistics for twitch-statistics-page",
   "main": "index.ts",
   "scripts": {
-    "build": "tsc -b",
-    "start": "tsc & node dist/index.js"
+    "build": "tsc",
+    "copy-files": "mkdir -p dist/test_data && cp -r test_data/* dist/test_data/",
+    "copy-files-win": "if not exist dist\\test_data mkdir dist\\test_data && xcopy /E /I test_data dist\\test_data",
+    "start": "tsc &&  node dist/index.js"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
