--- a/apps/async-statistics-calc/package.json
+++ b/apps/async-statistics-calc/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "copy-files": "mkdir -p dist/test_data && cp -r test_data/* dist/test_data/",
     "copy-files-win": "if not exist dist\\test_data mkdir dist\\test_data && xcopy /E /I test_data dist\\test_data",
-    "start": "tsc &&  node dist/src/index.js"
+    "start": "tsc &&  node dist/src/index.js",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
