Adding POC of updating file instead of overwriting

--- a/apps/async-statistics-calc/.env.development
+++ b/apps/async-statistics-calc/.env.development
@@ -1,2 +1,4 @@
 DIRECTORY_PATH=../test_data/twitch/2024/08/10
-SAVE_OUTPUT_FILE=false
+SUMMARY_OUTPUT_DIR=dist/test_data/twitch/2024/08/
+SUMMARY_OUTPUT_FILENAME=summary.json
+SAVE_OUTPUT_FILE=true
