--- a/apps/async-statistics-calc/.env.development
+++ b/apps/async-statistics-calc/.env.development
@@ -1,3 +1,4 @@
+MOCKED=true
 DIRECTORY_PATH=../test_data/twitch/2024/08/10
 SUMMARY_OUTPUT_DIR=dist/test_data/twitch/2024/08/
 SUMMARY_OUTPUT_FILENAME=summary.json
