--- a/apps/async-statistics-calc/.env.production
+++ b/apps/async-statistics-calc/.env.production
@@ -1,5 +1,5 @@
 MOCKED=false
-DIRECTORY_PATH=../data/twitch/2024/08/10
-SUMMARY_OUTPUT_DIR=../test_data/twitch/2024/08/
+DIRECTORY_PATH=../data/twitch/
+SUMMARY_OUTPUT_DIR=../test_data/twitch/
 SUMMARY_OUTPUT_FILENAME=summary.json
 SAVE_OUTPUT_FILE=true
