Adding back cron to fetch data every 5 minutes

--- a/apps/async-statistics-calc/.env.production
+++ b/apps/async-statistics-calc/.env.production
@@ -1,5 +1,5 @@
 MOCKED=false
 DIRECTORY_PATH=dist/data/twitch
-SUMMARY_OUTPUT_DIR=../test_data/twitch/
+SUMMARY_OUTPUT_DIR=dist/data/twitch
 SUMMARY_OUTPUT_FILENAME=summary.json
 SAVE_OUTPUT_FILE=true
