--- a/apps/async-statistics-calc/.env.development
+++ b/apps/async-statistics-calc/.env.development
@@ -1,5 +1,5 @@
 MOCKED=true
-DIRECTORY_PATH=../test_data/twitch/2024/08/10
+DIRECTORY_PATH=dist/test_data/twitch/2024/08/10
 SUMMARY_OUTPUT_DIR=dist/test_data/twitch/2024/08/
 SUMMARY_OUTPUT_FILENAME=summary.json
 SAVE_OUTPUT_FILE=true
