--- a/.github/workflows/calculate-statistics.yaml
+++ b/.github/workflows/calculate-statistics.yaml
@@ -39,3 +39,19 @@ jobs:
     - name: Run script
       working-directory: apps/async-statistics-calc
       run: npm run start-prod
+
+    - name: Push new changes to db repo
+      env:
+        TARGET_REPO_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
+      run: |
+        # Configure Git with credentials
+        cd apps/twitch-db-async-fetcher/dist/data
+        
+        # Configure Git with credentials
+        git config user.name "twitch-statistics-bot"
+        git config user.email "actions@github.com"
+
+        # Add, commit, and push changes
+        git add .
+        git commit -m "Adding new calculations for `date +'%Y-%m-%d'`"
+        git push https://x-access-token:${{ secrets.REPO_ACCESS_TOKEN }}@github.com/pajelonek/twitch-statistics-db.git master
