--- a/.github/workflows/calculate-statistics.yaml
+++ b/.github/workflows/calculate-statistics.yaml
@@ -47,6 +47,7 @@ jobs:
         # Configure Git with credentials
         git config user.name "twitch-statistics-bot"
         git config user.email "actions@github.com"
+        cd apps/async-statistics-calc
         ls 
         # Add, commit, and push changes
         git add .
