--- a/.github/workflows/calculate-statistics.yaml
+++ b/.github/workflows/calculate-statistics.yaml
@@ -16,7 +16,9 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '16'
+        node-version: '22'
+        cache: 'npm'
+        cache-dependency-path: apps/async-statistics-calc/package-lock.json
 
     - name: Install dependencies
       working-directory: apps/async-statistics-calc
