--- a/apps/async-statistics-calc/package.json
+++ b/apps/async-statistics-calc/package.json
@@ -10,14 +10,14 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "@types/node": "^22.4.1",
     "jest": "^29.7.0",
+    "@types/jest": "^29.5.12",
     "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
     "@dotenvx/dotenvx": "^1.10.3",
-    "axios": "^1.7.4"
+    "axios": "^1.7.4",
+    "@types/node": "^22.4.1"
   }
 }
