--- a/apps/twitch-db-async-fetcher/package.json
+++ b/apps/twitch-db-async-fetcher/package.json
@@ -7,17 +7,18 @@
     "build": "tsc",
     "start": "tsc & node dist/index.js"
   },
+  "engines" : { 
+    "npm" : ">=10.0.0 <11.0.0",
+    "node" : ">=22.0.0 <23.0.0"
+  },
   "devDependencies": {
     "@types/jest": "^29.5.12",
-    "@types/node": "^22.2.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.4"
   },
   "dependencies": {
-    "api-kick": "^1.0.1",
+    "@types/node": "^22.2.0",
     "axios": "^1.7.4",
-    "cloudscraper": "^4.6.0",
-    "dotenv": "^16.4.5",
-    "ts-retry": "^4.2.5"
+    "dotenv": "^16.4.5"
   }
 }
