Adding more tests and refactoring logic

--- a/apps/async-statistics-calc/.env.development
+++ b/apps/async-statistics-calc/.env.development
@@ -1,5 +1,6 @@
 MOCKED=true
-DIRECTORY_PATH=dist/test_data/twitch/2024/08/10
-SUMMARY_OUTPUT_DIR=dist/test_data/twitch/2024/08/
+DIRECTORY_PATH=dist/test_data/twitch
+DIRECTORY_MOCKED_YESTERDAY_PATH=/2024/08/10
+DIRECTORY_MOCKED_YESTERDAY_MONTH_PATH=/2024/08
 SUMMARY_OUTPUT_FILENAME=summary.json
-SAVE_OUTPUT_FILE=true
+SAVE_OUTPUT_FILE=false
