--- a/.github/workflows/push-prod.yaml
+++ b/.github/workflows/push-prod.yaml
@@ -27,17 +27,12 @@ jobs:
           distribution: 'adopt'
           java-version: '17'
 
-      - name: Set up Node
-        uses: actions/setup-node@v4
-
-      - name: Cache Node.js modules
-        id: cache-node-modules
-        uses: actions/cache@v3
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          path: apps/twitch-statistics-page/node_modules
-          key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-modules-
+          node-version: '22'
+          cache: 'npm'
+          cache-dependency-path: apps/twitch-statistics-page/package-lock.json
 
       - name: Install dependencies
         working-directory: apps/twitch-statistics-page
