--- a/apps/twitch-statistics-page/package.json
+++ b/apps/twitch-statistics-page/package.json
@@ -4,8 +4,9 @@
   "homepage": "https://pajelonek.github.io/twitch-statistics-page",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.13.0",
+    "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "react": "^18.3.1",
